--- a/fullstack/backend/framework/flipkartBackend/src/views/home.ejs
+++ b/fullstack/backend/framework/flipkartBackend/src/views/home.ejs
@@ -57,7 +57,7 @@
 <div class="row">
     <div class="col"></div>
     <div class="col">admin side</div>
-    <div class="col"></div>
+    <div class="col"><%=name%></div>
 </div>
 
 
