--- a/fullstack/backend/framework/flipkartBackend/src/views/login.ejs
+++ b/fullstack/backend/framework/flipkartBackend/src/views/login.ejs
@@ -25,7 +25,7 @@
             <form action="http://localhost:8001/api/home" method="">
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">name</label>
-                    <input type="text" class="form-control"  value="<%=name%>"  id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <input type="text" class="form-control"  value="<%=name%>"  id="exampleInputEmail1" aria-describedby="emailHelp" name="name">
                    </div>
                 <div class="mb-3">
                   <label for="exampleInputEmail1" class="form-label">Email address</label>
